; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/smbfs/lib/smb/extr_mbuf.c_m_getm.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/smbfs/lib/smb/extr_mbuf.c_m_getm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { %struct.mbuf* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @m_getm(%struct.mbuf* %0, i64 %1, %struct.mbuf** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mbuf*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.mbuf**, align 8
  %8 = alloca %struct.mbuf*, align 8
  %9 = alloca %struct.mbuf*, align 8
  %10 = alloca i32, align 4
  store %struct.mbuf* %0, %struct.mbuf** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.mbuf** %2, %struct.mbuf*** %7, align 8
  %11 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  store %struct.mbuf* %11, %struct.mbuf** %9, align 8
  br label %12

12:                                               ; preds = %23, %3
  %13 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  %14 = call i64 @M_TRAILINGSPACE(%struct.mbuf* %13)
  %15 = load i64, i64* %6, align 8
  %16 = sub i64 %15, %14
  store i64 %16, i64* %6, align 8
  %17 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  %18 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %17, i32 0, i32 0
  %19 = load %struct.mbuf*, %struct.mbuf** %18, align 8
  %20 = icmp eq %struct.mbuf* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %12
  br label %27

22:                                               ; preds = %12
  br label %23

23:                                               ; preds = %22
  %24 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  %25 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %24, i32 0, i32 0
  %26 = load %struct.mbuf*, %struct.mbuf** %25, align 8
  store %struct.mbuf* %26, %struct.mbuf** %9, align 8
  br label %12

27:                                               ; preds = %21
  %28 = load i64, i64* %6, align 8
  %29 = icmp ugt i64 %28, 0
  br i1 %29, label %30, label %40

30:                                               ; preds = %27
  %31 = load i64, i64* %6, align 8
  %32 = call i32 @m_get(i64 %31, %struct.mbuf** %8)
  store i32 %32, i32* %10, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %30
  %35 = load i32, i32* %10, align 4
  store i32 %35, i32* %4, align 4
  br label %43

36:                                               ; preds = %30
  %37 = load %struct.mbuf*, %struct.mbuf** %8, align 8
  %38 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  %39 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %38, i32 0, i32 0
  store %struct.mbuf* %37, %struct.mbuf** %39, align 8
  br label %40

40:                                               ; preds = %36, %27
  %41 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %42 = load %struct.mbuf**, %struct.mbuf*** %7, align 8
  store %struct.mbuf* %41, %struct.mbuf** %42, align 8
  store i32 0, i32* %4, align 4
  br label %43

43:                                               ; preds = %40, %34
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local i64 @M_TRAILINGSPACE(%struct.mbuf*) #1

declare dso_local i32 @m_get(i64, %struct.mbuf**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
